@@ -116,9 +116,9 @@ abstract class AbstractFactory
         return function (
             int $errno,
             string $errstr,
-            string $errfile = null,
-            int $errline = null,
-            array $errcontext = null
+            ?string $errfile = null,
+            ?int $errline = null,
+            ?array $errcontext = null
         ): bool {
             // Do nothing.
             return true;
